maybe partly working theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,16 +16,15 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body.light {
+  background-color: white;
+  color: black;
 }
 
+body.dark {
+  background-color: black;
+  color: white;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
